--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.5.1",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.27",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
