--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@grapecity/wijmo.react.all": "^5.20221.842",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,6 +15,7 @@
     "lodash": "^4.17.21",
     "openvidu-react": "^2.22.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -22,7 +24,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.7",
-    "reactstrap": "^9.1.2",
+    "reactstrap": "^9.1.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.5.1",
